# public-google-ads-mcp

./: .env.example  .gitignore  README.md  WINDOWS_CLAUDE_DESKTOP_SETUP.md  pyproject.toml
auth/: README.md  generate_refresh_token.py
docs/: TOOLS_DESIGN.md  WINDOWS_CLAUDE_DESKTOP_SETUP.md
scripts/: generate-refresh-token-windows.ps1  generate-refresh-token.sh  get_refresh_token.py  install-public-google-ads-mcp.ps1  setup-windows-claude-desktop.ps1
skills/: ab-test-analyzer-skill.md  ad-spend-allocator-skill.md  competitor-teardown-skill.md  content-repurposer-skill.md  email-sequence-writer-skill.md  google-ads-audit-skill.md  meta-ads-audit-skill.md  programmatic-seo-builder-skill.md  utm-tracking-generator-skill.md
src/google_ads_mcp/: app.py  mock_data.py  server.py
src/google_ads_mcp/google_ads/: client.py  utils.py
src/google_ads_mcp/tools/: __init__.py  accounts.py  diagnostics.py  reporting.py
