[project]
name = "google-ads-mcp"
version = "0.1.0"
description = "MCP server for Google Ads account data - lets Claude pull live campaign, keyword, and performance data"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "google-ads>=25.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
google-ads-mcp = "google_ads_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_ads_mcp"]
